--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "babel-plugin-component": "^1.1.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
+		"stylus": "^0.54.5",
+		"stylus-loader": "^3.0.2",
     "vue-cli-plugin-element": "^1.0.0",
     "vue-template-compiler": "^2.5.17"
   }
