--- a/src/assets/json/page-config.json
+++ b/src/assets/json/page-config.json
@@ -3,7 +3,7 @@
 		"title": "云忆网络",
 		"background": "#fff",
 		"theme": null,
-		"matomoId": null
+		"countId": null
 	},
 	"themes": [{
 		"value": "theme1",
