--- a/src/assets/json/page-config.json
+++ b/src/assets/json/page-config.json
@@ -1,30 +1,42 @@
 {
-	"pageConfig": {
-		"title": "云忆网络",
-		"background": "#fff",
-		"theme": null,
-		"countId": null
-	},
-	"themes": [{
-		"value": "theme1",
-		"name": "主题1",
-		"banner": "static/img/theme1.jpg",
-		"background": "#4a9bed",
-		"contentWidth": "100%",
-		"borderRadius": false
-	}, {
-		"value": "theme2",
-		"name": "主题2",
-		"banner": "static/img/theme2.jpg",
-		"background": "#fe7c01",
-		"contentWidth": "90%",
-		"borderRadius": true
-	}, {
-		"value": "theme3",
-		"name": "主题3",
-		"banner": "static/img/theme3.jpg",
-		"background": "#707988",
-		"contentWidth": "80%",
-		"borderRadius": true
-	}]
+  "pageConfig": {
+    "title": "云忆网络",
+    "background": "#fff",
+    "theme": null,
+    "countId": null
+  },
+  "themes": [
+    {
+      "value": "theme1",
+      "name": "主题1",
+      "banner": "static/img/theme1.jpg",
+      "background": "#4a9bed",
+      "contentWidth": "100%",
+      "borderRadius": false
+    },
+    {
+      "value": "theme2",
+      "name": "主题2",
+      "banner": "static/img/theme2.jpg",
+      "background": "#fe7c01",
+      "contentWidth": "90%",
+      "borderRadius": true
+    },
+    {
+      "value": "theme3",
+      "name": "主题3",
+      "banner": "static/img/theme3.jpg",
+      "background": "#707988",
+      "contentWidth": "80%",
+      "borderRadius": true
+    },
+    {
+      "value": "theme4",
+      "name": "主题4",
+      "banner": "static/img/theme4.jpg",
+      "background": "#ffffff",
+      "contentWidth": "90%",
+      "borderRadius": true
+    }
+  ]
 }
