--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-	"name": "form-design",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
-	},
-	"dependencies": {
-		"vue": "^2.5.17",
-		"vue-router": "^3.0.1",
-		"element-ui": "^2.4.5",
-		"vuedraggable": "^2.17.0",
-		"vuex": "^3.0.1",
-		"crypto-js": "^3.1.9-1"
-	},
-	"devDependencies": {
-		"@vue/cli-plugin-babel": "^3.2.0",
-		"@vue/cli-plugin-eslint": "^3.2.0",
-		"@vue/cli-service": "^3.2.0",
-		"babel-eslint": "^10.0.1",
-		"babel-plugin-component": "^1.1.1",
-		"eslint": "^5.8.0",
-		"eslint-plugin-vue": "^5.0.0-0",
-		"stylus": "^0.54.5",
-		"stylus-loader": "^3.0.2",
-		"vue-cli-plugin-element": "^1.0.0",
-		"vue-template-compiler": "^2.5.17"
-	}
+  "name": "form-design",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "crypto-js": "^3.1.9-1",
+    "element-ui": "^2.4.5",
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
+    "vuedraggable": "^2.23.0",
+    "vuex": "^3.0.1"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.2.0",
+    "@vue/cli-plugin-eslint": "^3.2.0",
+    "@vue/cli-service": "^3.2.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-component": "^1.1.1",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0-0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "vue-cli-plugin-element": "^1.0.0",
+    "vue-template-compiler": "^2.5.17"
+  }
 }
