--- a/src/assets/json/page-config.json
+++ b/src/assets/json/page-config.json
@@ -1,7 +1,7 @@
 {
   "pageConfig": {
     "title": "云忆网络",
-    "background": "#fff",
+    "backgroundColor": "#fff",
     "theme": null,
     "countId": null
   },
@@ -10,7 +10,7 @@
       "value": "theme1",
       "name": "主题1",
       "banner": "static/img/theme1.jpg",
-      "background": "#4a9bed",
+      "backgroundColor": "#4a9bed",
       "contentWidth": "100%",
       "borderRadius": false
     },
@@ -18,7 +18,7 @@
       "value": "theme2",
       "name": "主题2",
       "banner": "static/img/theme2.jpg",
-      "background": "#707988",
+      "backgroundColor": "#707988",
       "contentWidth": "80%",
       "borderRadius": true
     },
@@ -26,8 +26,8 @@
       "value": "theme3",
       "name": "主题3",
       "banner": "static/img/theme3.jpg",
-      "background": "#ffffff",
-      "contentWidth": "90%",
+      "backgroundColor": "#ffffff",
+      "margin": "-50px 20px 20px 20px",
       "borderRadius": true
     }
   ]
