新增页面背景图配置

--- a/src/assets/json/page-config.json
+++ b/src/assets/json/page-config.json
@@ -2,6 +2,7 @@
   "pageConfig": {
     "title": "云忆网络",
     "backgroundColor": "#fff",
+    "backgroundImage": null,
     "theme": null,
     "countId": null
   },
