--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "core-js": "^2.6.5",
     "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.5",
-    "vuedraggable": "^2.23.0",
+    "quill": "^1.3.7",
     "vue": "^2.6.10",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.3",
+    "vuedraggable": "^2.23.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
