--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "compressorjs": "^1.0.6",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
     "quill": "^1.3.7",
