--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "compressorjs": "^1.0.6",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
+    "nanoid": "^3.3.4",
     "quill": "^1.3.7",
     "vue": "^2.6.12",
     "vue-quill-editor": "^3.0.6",
@@ -24,9 +25,9 @@
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "babel-plugin-component": "^1.1.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-element": "^1.0.1",
