--- a/package.json
+++ b/package.json
@@ -8,29 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "core-js": "^3.30.1",
     "compressorjs": "^1.0.6",
-    "core-js": "^3.6.5",
-    "element-ui": "^2.13.2",
+    "element-ui": "^2.15.13",
     "nanoid": "^3.3.4",
     "quill": "^1.3.7",
-    "vue": "^2.6.12",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.4.8",
     "vuedraggable": "^2.24.0",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "vue": "^2.7.14"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-component": "^1.1.1",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.6.12"
+    "stylus-loader": "^3.0.2"
   }
 }
