--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.30.1",
-    "compressorjs": "^1.0.6",
-    "element-ui": "^2.15.13",
-    "nanoid": "^3.3.4",
-    "quill": "^1.3.7",
-    "vue-quill-editor": "^3.0.6",
+    "core-js": "3.30.1",
+    "compressorjs": "1.0.6",
+    "element-ui": "2.15.13",
+    "nanoid": "3.3.4",
+    "quill": "1.3.7",
+    "vue-quill-editor": "3.0.6",
     "vue-router": "^3.4.8",
-    "vuedraggable": "^2.24.0",
-    "vuex": "^3.5.1",
-    "vue": "^2.7.14"
+    "vuedraggable": "2.24.3",
+    "vuex": "3.5.1",
+    "vue": "2.7.14"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
